add kiosk movie support

--- a/assets/video_looper.ini
+++ b/assets/video_looper.ini
@@ -10,7 +10,6 @@
 
 # Video_looper configuration block follows.
 [video_looper]
-
 # Set which video player will be used to play media files.  Can be either omxplayer,
 # hello_video or image_player. omxplayer can play common formats like avi, mov, mp4, etc. and
 # with full audio and video, but it has a small ~100ms delay between videos.
@@ -116,7 +115,7 @@ readonly = true
 [directory]
 # The path to search for movies when using the directory file reader.
 # (see the file_reader section above to enable it)
-path = /home/pi/video
+path = /home/pi/Videos
 
 
 # Copy-mode file reader configuration follows.
@@ -141,7 +140,7 @@ copyloader = false
 # default is videopi - you should consider changing it - 
 # if it is empty no check will be performed
 # for maximum compatibility use only ascii characters
-password = videopi
+password = 
 
 
 [playlist]
