Add functionality to select movie by using numeric keys

--- a/assets/video_looper.ini
+++ b/assets/video_looper.ini
@@ -34,6 +34,16 @@ file_reader = usb_drive
 #file_reader = directory
 #file_reader = usb_drive_copymode
 
+#
+# Kiosk file which will play first and continuous unless another file selected
+#
+kiosk_file = /home/pi/video/kiosk.mp4 
+
+#
+# Write a csv log file to /var/log
+#
+enable_logging = false
+
 # Note on usb_drive_copymode:
 # If you enable this mode, media files are copied from the USB stick to the path 
 # specified in the [directory] section below.
@@ -95,8 +105,8 @@ fgcolor = 255, 255, 255
 
 # Output program state to standard output if true.
 # Useful for debugging to see whats going on behind the scenes
-console_output = false
-#console_output = true
+#console_output = false
+console_output = true
 
 
 # USB drive file reader configuration follows.
